--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_DOMAIN=localhost:3000
 
 # postgres connection string
-DATABASE_URL=postgres://postgres@localhost/example
+DATABASE_URL=
 
 # email from address, ex: "Example <hey@example.com>"
 EMAIL_FROM="Example <hey@example.com>"
@@ -20,7 +20,3 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 # true or 1, defaults to true
 SMTP_SECURE=
-
-# set this to 1 to build the app as a standalone app
-# if you are building a docker image, this is already set for you
-STANDALONE=0
