--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "next-hono-lucia",
+    "name": "hnshmc-web",
     "version": "1.0.0",
     "private": true,
-    "license": "MIT",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -10,18 +9,17 @@
         "start": "next start",
         "lint": "next lint --fix",
         "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,mdx}\"",
-        "db:generate": "dotenv -c pnpm drizzle-kit generate",
-        "db:migrate": "dotenv -c pnpm drizzle-kit migrate",
-        "db:studio": "dotenv -c pnpm drizzle-kit studio",
-        "email-preview": "email preview ./src/emails"
+        "email-preview": "email preview ./src/emails",
+        "db:pull": "dotenv -c pnpm prisma db pull",
+        "db:studio": "dotenv -c pnpm prisma studio"
     },
     "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247",
     "dependencies": {
         "@hono/zod-openapi": "^0.15.3",
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.9.0",
-        "@lucia-auth/adapter-drizzle": "^1.1.0",
-        "@node-rs/argon2": "^1.8.3",
+        "@lucia-auth/adapter-prisma": "^4.0.1",
+        "@prisma/client": "5.18.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-label": "^2.1.0",
@@ -33,28 +31,27 @@
         "@tanstack/react-query-devtools": "^5.52.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "drizzle-orm": "^0.33.0",
-        "hono": "4.5.7",
+        "hono": "4.5.8",
         "input-otp": "^1.2.4",
         "jsx-email": "^1.12.1",
         "lucia": "^3.2.0",
         "lucide-react": "^0.429.0",
-        "next": "14.2.5",
+        "next": "15.0.0-canary.125",
         "next-themes": "^0.3.0",
         "nodemailer": "^6.9.14",
         "ofetch": "^1.3.4",
         "oslo": "^1.2.1",
-        "postgres": "^3.4.4",
         "query-string": "^9.1.0",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
+        "react": "19.0.0-rc-1d989965-20240821",
+        "react-dom": "19.0.0-rc-1d989965-20240821",
         "react-hook-form": "^7.52.2",
         "resend": "^4.0.0",
         "server-only": "^0.0.1",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.23.8"
+        "zod": "^3.23.8",
+        "zod-prisma-types": "^3.1.8"
     },
     "devDependencies": {
         "@tailwindcss/container-queries": "^0.1.1",
@@ -64,9 +61,8 @@
         "@total-typescript/ts-reset": "^0.5.1",
         "@types/node": "^22.5.0",
         "@types/nodemailer": "^6.4.15",
-        "@types/pg": "^8.11.6",
-        "@types/react": "^18.3.4",
-        "@types/react-dom": "^18.3.0",
+        "@types/react": "npm:types-react@rc",
+        "@types/react-dom": "npm:types-react-dom@rc",
         "@typescript-eslint/eslint-plugin": "^7.16.1",
         "@typescript-eslint/parser": "^7.16.1",
         "autoprefixer": "^10.4.20",
@@ -74,16 +70,20 @@
         "dotenv-cli": "^7.4.2",
         "drizzle-kit": "^0.24.0",
         "eslint": "^8.57.0",
-        "eslint-config-next": "14.2.5",
+        "eslint-config-next": "15.0.0-canary.125",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-tailwindcss": "^3.17.4",
         "jiti": "^1.21.6",
-        "pg": "^8.12.0",
         "postcss": "^8.4.41",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
+        "prisma": "^5.18.0",
         "tailwindcss": "^3.4.10",
         "tailwindcss-debug-screens": "^2.2.1",
         "typescript": "^5.5.4"
+    },
+    "overrides": {
+        "@types/react": "npm:types-react@rc",
+        "@types/react-dom": "npm:types-react-dom@rc"
     }
 }
