--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
         "**/*.tsx",
         "**/*.mdx",
         ".next/types/**/*.ts",
-        "next.config.mjs"
+        "next.config.ts"
     ],
     "exclude": ["node_modules"]
 }
