--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,mdx}\"",
         "email-preview": "email preview ./src/emails",
         "db:pull": "dotenv -c pnpm prisma db pull",
-        "db:studio": "dotenv -c pnpm prisma studio"
+        "db:studio": "dotenv -c pnpm prisma studio",
+        "postinstall": "dotenv -c pnpm prisma generate"
     },
     "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247",
     "dependencies": {
