--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
             }
         ],
         "baseUrl": ".",
+        "noErrorTruncation": true,
         "paths": {
             "@/*": ["src/*"],
             "@@/*": ["./*"]
