added profile images

--- a/.env
+++ b/.env
@@ -20,3 +20,9 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 # true or 1, defaults to true
 SMTP_SECURE=
+
+ACCOUNT_ID=
+BUCKET_NAME=
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+BUCKET_DOMAIN=
