--- a/package.json
+++ b/package.json
@@ -10,33 +10,37 @@
         "lint": "next lint --fix",
         "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,mdx}\"",
         "email-preview": "email preview ./src/emails",
+        "db:generate": "dotenv -c pnpm prisma generate",
         "db:pull": "dotenv -c pnpm prisma db pull",
+        "db:push": "dotenv -c pnpm prisma db push",
         "db:studio": "dotenv -c pnpm prisma studio",
         "postinstall": "dotenv -c pnpm prisma generate"
     },
-    "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276",
+    "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
     "dependencies": {
-        "@hono/zod-openapi": "^0.15.3",
+        "@aws-sdk/client-s3": "^3.637.0",
+        "@aws-sdk/s3-request-presigner": "^3.637.0",
+        "@hono/zod-openapi": "^0.16.0",
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.9.0",
         "@lucia-auth/adapter-prisma": "^4.0.1",
-        "@prisma/client": "5.18.0",
+        "@prisma/client": "5.19.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-toast": "^1.2.1",
-        "@scalar/hono-api-reference": "^0.5.142",
-        "@t3-oss/env-nextjs": "^0.11.0",
-        "@tanstack/react-query": "^5.52.1",
-        "@tanstack/react-query-devtools": "^5.52.1",
+        "@scalar/hono-api-reference": "^0.5.143",
+        "@t3-oss/env-nextjs": "^0.11.1",
+        "@tanstack/react-query": "^5.53.1",
+        "@tanstack/react-query-devtools": "^5.53.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "hono": "4.5.8",
+        "hono": "4.5.10",
         "input-otp": "^1.2.4",
         "jsx-email": "^1.12.1",
         "lucia": "^3.2.0",
-        "lucide-react": "^0.435.0",
+        "lucide-react": "^0.437.0",
         "next": "15.0.0-canary.125",
         "next-themes": "^0.3.0",
         "nodemailer": "^6.9.14",
@@ -51,16 +55,15 @@
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.23.8",
-        "zod-prisma-types": "^3.1.8"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.14",
-        "@tanstack/eslint-plugin-query": "^5.52.0",
-        "@total-typescript/ts-reset": "^0.5.1",
-        "@types/node": "^22.5.0",
+        "@tailwindcss/forms": "^0.5.8",
+        "@tailwindcss/typography": "^0.5.15",
+        "@tanstack/eslint-plugin-query": "^5.53.0",
+        "@total-typescript/ts-reset": "^0.6.0",
+        "@types/node": "^22.5.2",
         "@types/nodemailer": "^6.4.15",
         "@types/react": "npm:types-react@rc",
         "@types/react-dom": "npm:types-react-dom@rc",
@@ -74,13 +77,14 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-tailwindcss": "^3.17.4",
         "jiti": "^1.21.6",
-        "postcss": "^8.4.41",
+        "postcss": "^8.4.42",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
-        "prisma": "^5.18.0",
+        "prisma": "^5.19.0",
         "tailwindcss": "^3.4.10",
         "tailwindcss-debug-screens": "^2.2.1",
-        "typescript": "^5.5.4"
+        "typescript": "^5.5.4",
+        "zod-prisma-types": "^3.1.8"
     },
     "overrides": {
         "@types/react": "npm:types-react@rc",
