added admin login

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-NEXT_PUBLIC_DOMAIN=localhost:3000
+NEXT_PUBLIC_DOMAIN=hnshmc-web.vercel.app
 
-# postgres connection string
 DATABASE_URL=
 
 # email from address, ex: "Example <hey@example.com>"
@@ -22,7 +21,7 @@ SMTP_PASSWORD=
 SMTP_SECURE=
 
 ACCOUNT_ID=
-BUCKET_NAME=
-ACCESS_KEY_ID=
+BUCKET_NAME=hnshmc
+ACCESS_KEY_ID=c363177231f8e3a5354b9686d7b198db
 SECRET_ACCESS_KEY=
-BUCKET_DOMAIN=
+BUCKET_DOMAIN=storage.hnshmc.thebinary.dev
