--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "NODE_OPTIONS='--inspect' next dev",
         "dev:email": "email dev -d ./src/emails -p 3001",
         "build": "next build",
         "test": "echo 'No tests found.'",
@@ -19,8 +19,8 @@
     },
     "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.651.1",
-        "@aws-sdk/s3-request-presigner": "^3.651.1",
+        "@aws-sdk/client-s3": "^3.654.0",
+        "@aws-sdk/s3-request-presigner": "^3.654.0",
         "@hono/zod-openapi": "^0.16.0",
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.9.0",
@@ -33,20 +33,20 @@
         "@radix-ui/react-toast": "^1.2.1",
         "@react-email/components": "0.0.25",
         "@react-email/render": "1.0.1",
-        "@scalar/hono-api-reference": "^0.5.146",
+        "@scalar/hono-api-reference": "^0.5.147",
         "@t3-oss/env-nextjs": "^0.11.1",
         "@tanstack/react-query": "^5.56.2",
         "@tanstack/react-query-devtools": "^5.56.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "hono": "4.6.1",
+        "hono": "4.6.2",
         "input-otp": "^1.2.4",
         "lucia": "^3.2.0",
-        "lucide-react": "^0.441.0",
-        "next": "15.0.0-canary.156",
+        "lucide-react": "^0.445.0",
+        "next": "15.0.0-canary.161",
         "next-themes": "^0.3.0",
         "nodemailer": "^6.9.15",
-        "ofetch": "^1.3.4",
+        "ofetch": "^1.4.0",
         "oslo": "^1.2.1",
         "query-string": "^9.1.0",
         "react": "19.0.0-rc-1d989965-20240821",
@@ -63,10 +63,10 @@
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
-        "@tanstack/eslint-plugin-query": "^5.56.1",
+        "@tanstack/eslint-plugin-query": "^5.57.1",
         "@total-typescript/ts-reset": "^0.6.1",
         "@types/node": "^22.5.5",
-        "@types/nodemailer": "^6.4.15",
+        "@types/nodemailer": "^6.4.16",
         "@types/react": "npm:types-react@rc",
         "@types/react-dom": "npm:types-react-dom@rc",
         "@typescript-eslint/eslint-plugin": "^7.16.1",
@@ -75,7 +75,7 @@
         "cssnano": "^7.0.6",
         "dotenv-cli": "^7.4.2",
         "eslint": "^8.57.0",
-        "eslint-config-next": "15.0.0-canary.156",
+        "eslint-config-next": "15.0.0-canary.161",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-tailwindcss": "^3.17.4",
         "jiti": "^1.21.6",
@@ -84,7 +84,7 @@
         "prettier-plugin-tailwindcss": "^0.6.6",
         "prisma": "^5.19.1",
         "react-email": "3.0.1",
-        "tailwindcss": "^3.4.11",
+        "tailwindcss": "^3.4.12",
         "tailwindcss-debug-screens": "^2.2.1",
         "typescript": "^5.6.2",
         "zod-prisma-types": "^3.1.8"
